src/styles/taskList.css
.taskList {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.listItem {
  display: flex;
  flex-direction: column;
  padding: 8px;
  border-radius: 0.4rem;
  background-color: #e9ecefbe;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

.listItem .primary-container {
  display: flex;
  align-items: center;
  gap: 8px;
}

.listItem .primary-container h2 {
  font-size: 24px;
}

.listItem .primary-container h2.completed {
  text-decoration: line-through;
  color: #50515aa9;
}

.listItem .secondary-container {
  display: flex;
  justify-content: space-between;
}

.listItem .secondary-info-container {
  display: flex;
  align-items: flex-end;
  gap: 8px;
}

.listItem .secondary-info-container .quantity-text {
  padding: 4px;
  font-size: 13px;
  border-radius: 4px;
  background-color: rgb(164, 198, 42);
  color: white;
}

.listItem .secondary-info-container .priority-low {
  padding: 4px;
  font-size: 13px;
  border-radius: 4px;
  background-color: rgb(137, 221, 165);
}

.listItem .secondary-info-container .priority-medium {
  padding: 4px;
  font-size: 13px;
  border-radius: 4px;
  background-color: rgb(248, 184, 10);
}

.listItem .secondary-info-container .priority-high {
  padding: 4px;
  font-size: 13px;
  border-radius: 4px;
  color: rgb(237, 226, 226);
  background-color: rgb(255, 46, 116);
}

.secondary-container .btn-container {
  display: flex;
  gap: 8px;
}

.secondary-container .btn-container button {
  padding: 0.4rem 0.7rem;
  background-color: rgb(74, 114, 227);
  color: white;
  border: none;
  border-radius: 0.4rem;
}

.secondary-container .btn-container button.delete {
  background-color: rgb(215, 66, 113);
}

.secondary-container .btn-container button:disabled {
  background-color: rgb(172, 172, 173);
  color: white;
}

.empty-task-list-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 25vh;
}

